# ios-dev-ai-writer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: release.yml  weekly.yml
agents/: __init__.py  article_agent.py  code_agent.py  editor_agent.py  image_agent.py  linkedin_agent.py  newsletter_agent.py  outline_agent.py  review_agent.py  swift_validation.py  topic_agent.py
ios-ai-articles/: _config.yml
memory/: family_picks.json
outputs/: quality_history.json  quality_history_meta.json
outputs/articles/: 2026-03-06-mastering-swift-concurrency-in-swiftui-6-building-seamless-ai-powered-ios-apps-with-the-ne.md  2026-03-10-optimizing-background-tasks-for-efficient-ios-app.md  (+24 more)
prompts/: article_factuality_prompt.txt  article_prompt.txt  code_prompt.txt  editor_prompt.txt  layout_repair_prompt.txt  linkedin_factuality_prompt.txt  linkedin_prompt.txt  newsletter_prompt.txt  outline_prompt.txt  review_prompt.txt  review_repair_prompt.txt  topic_prompt.txt  voice_prompt.txt
scanners/: __init__.py  author_context.json  custom_trends.json  trend_scanner.py
scripts/: editorial_gate.py  health_check.py  publish_burst.py  update_readme.py
tests/: test_article_repair.py  test_content_filters.py  test_health_check.py  test_layout_rubric.py  test_learnings.py  test_openai_config.py  test_published_titles_auth.py  test_reference_content.py  test_swift_validation.py  test_trend_discovery.py  test_trend_scanner_feeds.py  test_wwdc_mode.py
utils/: __init__.py  article_repair.py  content_filters.py  learnings.py  observability.py  openai_logging.py  reference_content.py
workflows/: __init__.py  weekly_pipeline.py
(+88 files in other folders)
