[project]
name = "ios-dev-ai-writer"
version = "1.6.1"
description = "AI agent pipeline that generates weekly iOS Medium articles from trend signals."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "ios-dev-ai-writer contributors" }
]
keywords = [
  "ios",
  "swiftui",
  "openai",
  "agent",
  "content-generation",
  "github-actions"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]

dependencies = [
  "openai>=2.26.0,<3",
  "python-dotenv>=1.2.1,<2",
  "requests>=2.32.5,<3",
  "feedparser>=6.0.12,<7"
]

[tool.setuptools]
packages = ["agents", "scanners", "workflows", "utils"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
